--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,9 +55,12 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    def compose = "1.0.0-alpha12"
-    def activity_version = "1.3.0-alpha02"
+    def compose = "1.0.0-beta01"
+    def activity_version = "1.3.0-alpha03"
+    implementation "androidx.compose.animation:animation:$compose"
+    implementation "androidx.compose.compiler:compiler:$compose"
     implementation "androidx.compose.ui:ui:$compose"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha03"
     implementation "androidx.compose.foundation:foundation:$compose"
     implementation "androidx.activity:activity-compose:$activity_version"
     implementation "androidx.compose.runtime:runtime:$compose"
@@ -66,7 +69,7 @@ dependencies {
     implementation "androidx.compose.material:material:$compose"
     implementation "androidx.compose.material:material-icons-core:$compose"
     implementation "androidx.compose.material:material-icons-extended:$compose"
-    implementation "androidx.compose.compiler:compiler:$compose"
+    implementation "androidx.compose.ui:ui-tooling:$compose"
     implementation "com.vanpra.compose-material-dialogs:datetime:0.2.11"
     implementation "com.vanpra.compose-material-dialogs:core:0.2.11"
     testImplementation 'junit:junit:4.+'
